    ADDED: select remote encoding for krarc
    ADDED: new synchronizer shortcuts for modifying the synchronizer tasks
    ADDED: credit for Václav in the about box

    FIXED: Right arrow in the detailed view can now go even inside iso files
    FIXED: Konfigurator: Dependency lists are now scrollable
    FIXED: Filter: Don't list comments in user/group chooser

    I18N: Updated Ukrainian translation (thanks to Yuri Chornoivan)
    I18N: Updated French translation (thanks Tourneur Henry-Nicolas)

Codebase in sync with the KDE3 1.90.0 release "Power Stone"
===========================================================

    FIXED: Current working directory not returned in populateVfsList
    FIXED: Eject DVD with right-click menu
    FIXED: Actionman, sometimes the command field is empty (the text was rolled),
    FIXED: GCC 4.3: missing #includes thanks to Fathi Boudra

     I18N: Updated Catalan translation (thanks Joaquim Perez)
     I18N: Updated French translation (thanks Tourneur Henry-Nicolas)


Codebase in sync with the KDE3 1.80.0 release "Final 3rd Stone"
===============================================================

    FIXED: searcher doesn't always find content in binary files
    FIXED: [ 1619452 ] Profile doesn't save status of sync-browse mode
    FIXED: [ 1681270 ] right clicking pops context menu immediately
    FIXED: [ 1645179 ] shortcut keys are not sent to the terminal
    FIXED: [ 1736496 ] always sort dirs by name not working

     I18N: Updated Hungarian translation
     I18N: Updated French translation (thanks Henry Nicolas)
     I18N: Fixed [ 1725003 ] bad spanish translation

Branched of KDE4 development
============================

     I18N: Fixed untranslatable strings, patch by Vaclav Juza, thanks


1.80.0-beta2 "Last Unstable Stone"
==================================
    
    ADDED: Terminal Emulator, paste with SHIFT+INSERT and CTRL+V
    ADDED: Vaclav's checksum patches (added sha* tools, fixed bugs etc...)