@@ -13,6 +13,9 @@ Codebase in sync with the KDE3 2.00.0-beta1 release
     FIXED: Konfigurator: Dependency lists are now scrollable
     FIXED: Filter: Don't list comments in user/group chooser
 
+    REMOVED: Clear location button (In KDE4 it is part of the KLineEdit).
+           Thanks Fathi Bourda for the patch.
+
     I18N: Updated Ukrainian translation (thanks to Yuri Chornoivan)
     I18N: Updated French translation (thanks Tourneur Henry-Nicolas)
 
